# ai-trade

./: .env.example  .gitignore  README.md  alembic.ini  compose.yaml  pyproject.toml
config/: universe.json
docs/: PROJECT_OVERVIEW.md
migrations/: env.py
migrations/versions/: 20260715_0001_initial.py
src/ai_trade/: __init__.py  api.py  backtest.py  config.py  db.py  domain.py  engine.py  market.py  memory.py  oms.py  portfolio.py  ports.py  qualification.py  research.py  risk.py
src/ai_trade/brokers/: __init__.py  fake.py  ibkr.py
src/ai_trade/strategies/: __init__.py  base.py  mean_reversion.py  momentum.py
src/ai_trade/templates/: dashboard.html  login.html
tests/: conftest.py  test_backtest.py  test_domain.py  test_engine.py  test_ibkr_adapter.py  test_market.py  test_oms.py  test_portfolio.py  test_qualification.py  test_risk.py
