[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "ai-trade"
version = "0.1.0"
description = "Production-shaped, deterministic paper-trading platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "asyncpg>=0.30,<1",
  "duckdb>=1.2,<2",
  "fastapi>=0.115,<1",
  "jinja2>=3.1,<4",
  "itsdangerous>=2.2,<3",
  "joblib>=1.4,<2",
  "lightgbm>=4.6,<5",
  "numpy>=2.1,<3",
  "polars>=1.22,<2",
  "pyarrow>=19,<20",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "python-multipart>=0.0.20,<1",
  "scikit-learn>=1.6,<2",
  "sqlalchemy[asyncio]>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
ibkr = ["ibapi>=9.81.1.post1"]
dev = [
  "hypothesis>=6.125,<7",
  "httpx>=0.28,<1",
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.9,<1",
]

[project.scripts]
ai-trade-api = "ai_trade.api:main"
ai-trade-backtest = "ai_trade.backtest:main"
ai-trade-qualify = "ai_trade.qualification:main"
ai-trade-research = "ai_trade.research:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_trade"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["ibapi.*", "joblib", "sklearn.*"]
ignore_missing_imports = true
